--- a/LISy/LISy/WorkWindow.xaml
+++ b/LISy/LISy/WorkWindow.xaml
@@ -36,7 +36,7 @@
                 <ImageBrush/>
             </CheckBox.Background>
         </CheckBox>
-        <CheckBox x:Name="checkBox_JA" Content="Journal" HorizontalAlignment="Left" Margin="230,100,0,0" VerticalAlignment="Top" Foreground="White" FontSize="18" Checked="checkBox_JA_Checked_1" >
+        <CheckBox x:Name="checkBox_JA" Content="Journal Articles" HorizontalAlignment="Left" Margin="230,100,0,0" VerticalAlignment="Top" Foreground="White" FontSize="18" Checked="checkBox_JA_Checked">
             <CheckBox.BorderBrush>
                 <RadialGradientBrush>
                     <GradientStop Color="Black"/>
@@ -47,7 +47,7 @@
                 <ImageBrush/>
             </CheckBox.Background>
         </CheckBox>
-        <CheckBox x:Name="checkBox_AV" Content="AV matireals" HorizontalAlignment="Left" Margin="309,100,0,0" VerticalAlignment="Top" Foreground="White" FontSize="18" Checked="checkBox_AV_Checked">
+        <CheckBox x:Name="checkBox_AV" Content="AV matireals" HorizontalAlignment="Left" Margin="372,100,0,0" VerticalAlignment="Top" Foreground="White" FontSize="18" Checked="checkBox_AV_Checked">
             <CheckBox.BorderBrush>
                 <RadialGradientBrush>
                     <GradientStop Color="Black"/>
@@ -71,29 +71,10 @@
         <Button x:Name="button_Profile" Content="My Profile" HorizontalAlignment="Left" Margin="10,146,0,0" VerticalAlignment="Top" Width="145" Height="30"  Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" FontSize="16" Click="button_Profile_Click"/>
         <Button x:Name="button_Booking" Content="Booking Story" HorizontalAlignment="Left" Margin="10,181,0,0" VerticalAlignment="Top" Width="145" Height="30" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" FontSize="16" Click="button_Booking_Click"/>
         <Button x:Name="button_Info" Content="Info" HorizontalAlignment="Left" Margin="10,216,0,0" VerticalAlignment="Top" Width="145" Height="30" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" FontSize="16" Click="button_Info_Click"/>
-        <Grid Margin="160,129,97,10">
-            <Label x:Name="label_book_1" Content="&quot;Introduction to Linear Algebra&quot; Gilbert Strang 4th edition &#xD;&#xA;(WELLESLEY - CAMBRIDGE PRESS)" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="430" Foreground="White" Height="50"/>
-            <Button x:Name="button_open_book_1" Content="Open" HorizontalAlignment="Left" Margin="445,10,0,0" VerticalAlignment="Top" Width="75" Height="26" FontSize="14" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Click="button_open_book_1_Click" />
-            <Label x:Name="label_book_2" Content="&quot;Introduction to Algorithms&quot; T. H. Cormen, C.E, Leiserson, R.L. Rivest, C. Stein &#xD;&#xA;3rd edition (The MIT Press Cambridge, Massachusetts)" HorizontalAlignment="Left" Margin="10,65,0,0" VerticalAlignment="Top" Width="430" Foreground="White" Height="50"/>
-            <Label x:Name="label_book_3" Content="&quot;The Catcher in the Rue&quot; J.D. Salinger (Rainbow Press)" HorizontalAlignment="Left" Margin="10,120,0,0" VerticalAlignment="Top" Width="430" Foreground="White" Height="26"/>
-            <Label x:Name="label_book_4" Content="&quot;Wheels&quot; Arthur Hailey 1972 (Doubleday - GARDEN CITY)" HorizontalAlignment="Left" Margin="10,151,0,0" VerticalAlignment="Top" Width="430" Foreground="White" Height="26"/>
-            <Label x:Name="label_book_5" Content="&quot;Computer Organization and Design&quot; D.A. Patterson 5th edition &#xA;(Morgan Koufmann)" HorizontalAlignment="Left" Margin="10,182,0,0" VerticalAlignment="Top" Width="430" Foreground="White" Height="50"/>
-            <Button x:Name="button_open_book_2" Content="Open" HorizontalAlignment="Left" Margin="445,65,0,0" VerticalAlignment="Top" Width="75" Height="26" FontSize="14" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White"  RenderTransformOrigin="0.48,1.577" Click="button_open_book_2_Click"/>
-            <Button x:Name="button_open_book_3" Content="Open" HorizontalAlignment="Left" Margin="445,120,0,0" VerticalAlignment="Top" Width="75" Height="26" FontSize="14" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Click="button_open_book_3_Click" />
-            <Button x:Name="button_open_book_4" Content="Open" HorizontalAlignment="Left" Margin="445,151,0,0" VerticalAlignment="Top" Width="75" Height="26" FontSize="14" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Click="button_open_book_4_Click" />
-            <Button x:Name="button_open_book_5" Content="Open" HorizontalAlignment="Left" Margin="445,182,0,0" VerticalAlignment="Top" Width="75" Height="26" FontSize="14" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Click="button_open_book_5_Click" />
+        <Grid HorizontalAlignment="Left" Margin="160,129,0,10" Width="530">
+            <Label x:Name="label" Content="&quot;Introduction to Linear Algebra&quot; Gilbert Strang 4th edition (WELLESLEY - CAMBRIDGE PRESS)" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="430" Foreground="White"/>
+            <Button x:Name="button_open" Content="Open" HorizontalAlignment="Left" Margin="445,10,0,0" VerticalAlignment="Top" Width="75" Height="26" FontSize="14" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Click="button_open_Click"/>
         </Grid>
-        <CheckBox x:Name="checkBox_Article" Content="Article" HorizontalAlignment="Left" Margin="431,100,0,0" VerticalAlignment="Top" Foreground="White" FontSize="18" Checked="checkBox_Article_Checked" >
-            <CheckBox.BorderBrush>
-                <RadialGradientBrush>
-                    <GradientStop Color="Black"/>
-                    <GradientStop Color="White" Offset="1"/>
-                </RadialGradientBrush>
-            </CheckBox.BorderBrush>
-            <CheckBox.Background>
-                <ImageBrush/>
-            </CheckBox.Background>
-        </CheckBox>
 
     </Grid>
 </Window>
