--- a/LISy/LISy/BookingInfoWindow.xaml
+++ b/LISy/LISy/BookingInfoWindow.xaml
@@ -12,8 +12,8 @@
     <Grid Background="#66000000">
         <Image x:Name="image_preview" HorizontalAlignment="Left" Height="133" Margin="10,10,0,0" VerticalAlignment="Top" Width="100" Source="Design/Strang.jpg" Stretch="Fill"/>
         <Label x:Name="label_name" Content="&quot;Introduction to Linear Algebra&quot; &#xD;&#xA;Gilbert Strang 4th edition &#xD;&#xA;(WELLESLEY - CAMBRIDGE PRESS)" HorizontalAlignment="Left" Margin="115,10,0,0" VerticalAlignment="Top" Width="227" Height="65" FontSize="14" Foreground="White"/>
-        <Button x:Name="button_book" Content="Check out" HorizontalAlignment="Left" Margin="10,148,0,0" VerticalAlignment="Top" Width="100" Height="32" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" FontSize="16"/>
-        <Label x:Name="label_info" Content="&gt;Some useful information about this &#xD;&#xA;book, which make you to book it." HorizontalAlignment="Left" Margin="115,80,0,0" VerticalAlignment="Top" Width="227" Foreground="White"/>
+        <Button x:Name="button_book" Content="Check out" HorizontalAlignment="Left" Margin="10,148,0,0" VerticalAlignment="Top" Width="100" Height="32" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" FontSize="16" Click="button_book_Click"/>
+        <Label x:Name="label_info" Content="&gt;Some useful information about this &#xD;&#xA;Book, which make you to Book it." HorizontalAlignment="Left" Margin="115,80,0,0" VerticalAlignment="Top" Width="227" Foreground="White"/>
         <Label x:Name="label_inStock" Content="" HorizontalAlignment="Left" Margin="115,122,0,0" VerticalAlignment="Top" RenderTransformOrigin="-1.14,-0.026" Height="28" Width="227" Foreground="White" FontSize="10"/>
     </Grid>
 </Window>
