--- a/LISy/LISy/MainWindow.xaml
+++ b/LISy/LISy/MainWindow.xaml
@@ -14,10 +14,10 @@
     </Window.Background>
     <Grid x:Name="grid_enter">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="275*"/>
-            <ColumnDefinition Width="7*"/>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="0*"/>
         </Grid.ColumnDefinitions>
-        <Image x:Name="image_background" HorizontalAlignment="Left" Height="100" Margin="10,10,0,0" VerticalAlignment="Top" Width="544" Source="Design\image_title_white.png" Grid.ColumnSpan="2"/>
+        <Image x:Name="image_background" HorizontalAlignment="Left" Height="100" Margin="10,10,0,0" VerticalAlignment="Top" Width="544" Source="Design\image_title_white.png"/>
         <Button x:Name="button_sign_in" Content="Sign In" Margin="200,257,186,0" Height="30" VerticalAlignment="Top" Background="{x:Null}" Foreground="White" Click="button_sign_in_Click">
             <Button.BorderBrush>
                 <ImageBrush/>
