--- a/LISy/LISy/AddUserCard.xaml
+++ b/LISy/LISy/AddUserCard.xaml
@@ -5,11 +5,27 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LISy"
         mc:Ignorable="d"
-        Title="Adding" Height="418.421" Width="347.368">
-    <Grid>
-        <Label Content="Name:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="29" Width="73"/>
-        <TextBox x:Name="name_of_new_user" HorizontalAlignment="Left" Height="29" Margin="88,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="241" FontSize="14"/>
-        <Label Content="LastName:" HorizontalAlignment="Left" Margin="10,44,0,0" VerticalAlignment="Top" Width="73" Height="29"/>
+        Title="Adding" Height="360.914" Width="365.413" ResizeMode="NoResize" Icon="Design/icon_logo100x100.ico">
+    <Grid x:Name="grid_adding" HorizontalAlignment="Left" Width="355" Height="332" VerticalAlignment="Top">
+        <Label x:Name="name_label" Content="Name:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="29" Width="73"/>
+        <TextBox x:Name="name_of_new_user" HorizontalAlignment="Left" Height="29" Margin="88,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="241" FontSize="14" TextChanged="name_of_new_user_TextChanged"/>
+        <Label x:Name="last_name_label" Content="Last Name:" HorizontalAlignment="Left" Margin="10,44,0,0" VerticalAlignment="Top" Width="73" Height="29"/>
+        <TextBox x:Name ="lastname_of_new_user" HorizontalAlignment="Left" Height="29" Margin="88,44,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="241" FontSize="14" TextChanged="lastname_of_new_user_TextChanged"/>
+        <Label x:Name="label_town" Content="Town:" HorizontalAlignment="Left" Margin="10,78,0,0" VerticalAlignment="Top" Width="73" Height="29"/>
+        <TextBox x:Name="town_of_new_user" HorizontalAlignment="Left" Height="29" Margin="88,78,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="241" FontSize="14" TextChanged="town_of_new_user_TextChanged"/>
+        <Label x:Name="label_street" Content="Street:" HorizontalAlignment="Left" Margin="10,112,0,0" VerticalAlignment="Top" Width="73" Height="29"/>
+        <TextBox x:Name="street_of_new_user" HorizontalAlignment="Left" Height="29" Margin="88,112,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="241" FontSize="14" TextChanged="street_of_new_user_TextChanged"/>
+        <Label x:Name="house_label" Content="Building:" HorizontalAlignment="Left" Margin="10,146,0,0" VerticalAlignment="Top" Width="73" Height="29"/>
+        <TextBox x:Name="house_of_new_user" HorizontalAlignment="Left" Height="29" Margin="88,146,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="241" FontSize="14" TextChanged="house_of_new_user_TextChanged"/>
+        <Label x:Name="flat_label" Content="Flat:" HorizontalAlignment="Left" Margin="10,180,0,0" VerticalAlignment="Top" Width="73" Height="29"/>
+        <TextBox x:Name="flat_of_new_user" HorizontalAlignment="Left" Height="29" Margin="88,180,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="241" FontSize="14" TextChanged="flat_of_new_user_TextChanged"/>
+        <Label x:Name="phone_label" Content="Phone Number:" HorizontalAlignment="Left" Margin="10,214,0,0" VerticalAlignment="Top" Width="94" Height="29"/>
+        <TextBox x:Name="phone_of_new_user" HorizontalAlignment="Left" Height="29" Margin="109,214,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="220" FontSize="14" TextChanged="phone_of_new_user_TextChanged"/>
+        <Label x:Name="status_label" Content="Status:" HorizontalAlignment="Left" Margin="10,279,0,0" VerticalAlignment="Top" Width="50" Height="29"/>
+        <CheckBox x:Name="faculty_check" Content="Faculty" HorizontalAlignment="Left" Margin="65,285,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.528,2.386"/>
+        <Label Content="Password:" HorizontalAlignment="Left" Margin="10,248,0,0" VerticalAlignment="Top" Width="73"/>
+        <PasswordBox x:Name="user_new_password" HorizontalAlignment="Left" Margin="88,248,0,0" VerticalAlignment="Top" Width="241" Height="29" FontSize="14"/>
+        <Button x:Name="save_user" Content="Save" HorizontalAlignment="Left" Margin="250,282,0,0" VerticalAlignment="Top" Width="79" Click="save_user_Click"/>
 
     </Grid>
 </Window>
