--- a/LISy/LISy/AddDocument.xaml
+++ b/LISy/LISy/AddDocument.xaml
@@ -13,15 +13,15 @@
         <Button x:Name="add_journal" Content="Journal" HorizontalAlignment="Left" Margin="418,10,0,0" VerticalAlignment="Top" Width="75" Height="30"/>
         <Button x:Name="add_av" Content="AV materials" HorizontalAlignment="Left" Margin="498,10,0,0" VerticalAlignment="Top" Width="85" Height="30"/>
         <Label x:Name="title_label" Content="Title:" HorizontalAlignment="Left" Margin="10,45,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden"/>
-        <TextBox x:Name="title_of_book" HorizontalAlignment="Left" Height="26" Margin="85,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" TextChanged="TextBox_TextChanged" FontSize="16" Visibility="Hidden"/>
+        <TextBox x:Name="title_of_book" HorizontalAlignment="Left" Height="26" Margin="85,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" TextChanged="TextBox_titleChanged" FontSize="16" Visibility="Hidden"/>
         <Label x:Name="author_of_book_label" Content="Authors:" HorizontalAlignment="Left" Margin="10,76,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden"/>
         <TextBox x:Name="author_of_book" HorizontalAlignment="Left" Height="26" Margin="85,76,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="author_of_book_TextChanged" Visibility="Hidden"/>
         <Label x:Name="publisher_label" Content="Publisher:" HorizontalAlignment="Left" Margin="10,107,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden"/>
         <TextBox x:Name="publisher_of_book" HorizontalAlignment="Left" Height="26" Margin="85,107,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="publisher_of_book_TextChanged" Visibility="Hidden"/>
         <Label x:Name="edition_of_book_label" Content="Edition:" HorizontalAlignment="Left" Margin="10,138,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden"/>
-        <TextBox HorizontalAlignment="Left" Height="26" Margin="85,138,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="TextBox_TextChanged_1" Visibility="Hidden"/>
+        <TextBox x:Name="edition_of_book" HorizontalAlignment="Left" Height="26" Margin="85,138,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="TextBox_Edition_Changed" Visibility="Hidden"/>
         <Label x:Name="year_label" Content="Year:" HorizontalAlignment="Left" Margin="10,169,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden"/>
-        <TextBox x:Name="tear_of_book" HorizontalAlignment="Left" Height="26" Margin="85,169,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="tear_of_book_TextChanged" Visibility="Hidden"/>
+        <TextBox x:Name="year_of_book" HorizontalAlignment="Left" Height="26" Margin="85,169,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="year_of_book_TextChanged" Visibility="Hidden"/>
         <Label x:Name="keywords_label" Content="KeyWords:" HorizontalAlignment="Left" Margin="10,200,0,0" VerticalAlignment="Top" Width="70" RenderTransformOrigin="0.5,0.231" Visibility="Hidden"/>
         <TextBox x:Name="keywords_of_book" HorizontalAlignment="Left" Height="26" Margin="85,200,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="keywords_of_book_TextChanged" Visibility="Hidden"/>
         <Label x:Name="price_label" Content="Price:" HorizontalAlignment="Left" Margin="313,45,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden"/>
@@ -33,6 +33,7 @@
         <TextBox x:Name="room_of_book" HorizontalAlignment="Left" Height="26" Margin="388,138,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="room_of_book_TextChanged" Visibility="Hidden"/>
         <Label x:Name="book_label_level" Content="Level:" HorizontalAlignment="Left" Margin="313,169,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden"/>
         <TextBox x:Name="level_of_book" HorizontalAlignment="Left" Height="26" Margin="388,169,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="level_of_book_TextChanged" Visibility="Hidden"/>
+        <Button x:Name="add_book_to_db" Content="Add" HorizontalAlignment="Left" Margin="481,200,0,0" VerticalAlignment="Top" Width="130" Height="35" FontSize="16" Click="add_book_to_db_Click" Visibility="Hidden"/>
 
     </Grid>
 </Window>
