--- a/LISy/LISy/UserModifyWindow.xaml
+++ b/LISy/LISy/UserModifyWindow.xaml
@@ -21,6 +21,7 @@
         <CheckBox x:Name="FacultyCheckBox" Content="Is Faculty" HorizontalAlignment="Left" Margin="10,122,0,0" VerticalAlignment="Top" Height="15" Width="68"/>
         <Button x:Name="Enter" Content="Enter" HorizontalAlignment="Left" Margin="90,154,0,0" VerticalAlignment="Top" Width="75" Height="20" Click="Enter_Click" Grid.ColumnSpan="2"/>
         <Button x:Name="Cancel" Content="Cancel" HorizontalAlignment="Left" Margin="10,154,0,0" VerticalAlignment="Top" Width="75" Height="20" Click="Cancel_Click" Grid.ColumnSpan="2"/>
+        <Button x:Name="Delete" Content="Delete" Grid.Column="1" HorizontalAlignment="Left" Margin="177,154,0,0" VerticalAlignment="Top" Width="75" Click="Delete_Click"/>
 
     </Grid>
 </Window>
