--- a/LISy/LISy/AddDocument.xaml
+++ b/LISy/LISy/AddDocument.xaml
@@ -11,7 +11,7 @@
         <Button x:Name="add_book" Content="Book" HorizontalAlignment="Left" Margin="233,10,0,0" VerticalAlignment="Top" Width="75" Height="30" Click="add_book_Click"/>
         <Button x:Name="add_reference_book" Content="Reference Book" HorizontalAlignment="Left" Margin="313,10,0,0" VerticalAlignment="Top" Width="100" Height="30"/>
         <Button x:Name="add_journal" Content="Journal" HorizontalAlignment="Left" Margin="418,10,0,0" VerticalAlignment="Top" Width="75" Height="30"/>
-        <Button x:Name="add_av" Content="AV materials" HorizontalAlignment="Left" Margin="498,10,0,0" VerticalAlignment="Top" Width="85" Height="30"/>
+        <Button x:Name="add_av" Content="AV materials" HorizontalAlignment="Left" Margin="498,10,0,0" VerticalAlignment="Top" Width="85" Height="30" Click="add_av_Click"/>
         <Label x:Name="title_label" Content="Title:" HorizontalAlignment="Left" Margin="10,45,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden"/>
         <TextBox x:Name="title_of_book" HorizontalAlignment="Left" Height="26" Margin="85,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" TextChanged="TextBox_titleChanged" FontSize="16" Visibility="Hidden"/>
         <Label x:Name="author_of_book_label" Content="Authors:" HorizontalAlignment="Left" Margin="10,76,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden"/>
@@ -34,6 +34,21 @@
         <Label x:Name="book_label_level" Content="Level:" HorizontalAlignment="Left" Margin="313,169,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden"/>
         <TextBox x:Name="level_of_book" HorizontalAlignment="Left" Height="26" Margin="388,169,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="level_of_book_TextChanged" Visibility="Hidden"/>
         <Button x:Name="add_book_to_db" Content="Add" HorizontalAlignment="Left" Margin="481,200,0,0" VerticalAlignment="Top" Width="130" Height="35" FontSize="16" Click="add_book_to_db_Click" Visibility="Hidden"/>
+        <Label x:Name="av_title_label" Content="Title:" HorizontalAlignment="Left" Margin="10,45,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden"/>
+        <TextBox x:Name="av_title_text_box" HorizontalAlignment="Left" Height="26" Margin="85,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="av_title_text_box_TextChanged" Visibility="Hidden"/>
+        <Label x:Name="authors_av_label" Content="Authors:" HorizontalAlignment="Left" Margin="10,76,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden"/>
+        <TextBox x:Name="authors_av_text_box" HorizontalAlignment="Left" Height="26" Margin="85,76,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="authors_av_text_box_TextChanged" Visibility="Hidden"/>
+        <Label x:Name="av_copy_label" Content="Copies:" HorizontalAlignment="Left" Margin="313,45,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden"/>
+        <TextBox x:Name="av_copy_text_box" HorizontalAlignment="Left" Height="26" Margin="388,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="av_copy_text_box_TextChanged" Visibility="Hidden"/>
+        <Label x:Name="av_room_label" Content="Room:" HorizontalAlignment="Left" Margin="313,76,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden"/>
+        <TextBox x:Name="av_room_text_box" HorizontalAlignment="Left" Height="26" Margin="388,76,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="av_room_text_box_TextChanged" Visibility="Hidden"/>
+        <Label x:Name="av_level_label" Content="Level:" HorizontalAlignment="Left" Margin="10,107,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden"/>
+        <TextBox x:Name="av_level_text_box" HorizontalAlignment="Left" Height="26" Margin="85,107,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="av_level_text_box_TextChanged" Visibility="Hidden"/>
+        <Button x:Name="av_add_to_db" Content="Add" HorizontalAlignment="Left" Margin="521,138,0,0" VerticalAlignment="Top" Width="90" Height="26" Click="av_add_to_db_Click" Visibility="Hidden"/>
+        <Label x:Name="av_price_label" Content="Price:" HorizontalAlignment="Left" Margin="313,107,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden"/>
+        <TextBox x:Name="av_price_text_box" HorizontalAlignment="Left" Height="26" Margin="388,107,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="Av_price_text_box" Visibility="Hidden"/>
+        <Label x:Name="av_keywords_label" Content="KeyWords:" HorizontalAlignment="Left" Margin="10,138,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden"/>
+        <TextBox x:Name="av_key_words_text_box" HorizontalAlignment="Left" Height="26" Margin="85,138,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="av_key_words_text_box_TextChanged" Visibility="Hidden"/>
 
     </Grid>
 </Window>
