--- a/LISy/LISy/LibrarianWorkWindow.xaml
+++ b/LISy/LISy/LibrarianWorkWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="LISy.LibrarianWorkWindow"
+﻿<Window x:Name="lib_work_window" x:Class="LISy.LibrarianWorkWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -11,10 +11,9 @@
         <Label x:Name="librarian_name_fill" Content="" HorizontalAlignment="Left" Margin="75,10,0,0" VerticalAlignment="Top" Height="31" Width="305" FontSize="16"/>
         <Label x:Name="librarian_status" Content="Status:" HorizontalAlignment="Left" Margin="10,46,0,0" VerticalAlignment="Top" Width="60" FontSize="16"/>
         <Label x:Name="librarian_status_fill" Content="" HorizontalAlignment="Left" Margin="75,46,0,0" VerticalAlignment="Top" Width="305" FontSize="16"/>
-        <Button x:Name="choose_user_card" Content="User Cards" HorizontalAlignment="Left" Margin="135,82,0,0" VerticalAlignment="Top" Width="120" Height="22" Click="choose_user_card_Click"/>
-        <Button x:Name="refresh" Content="Refresh" HorizontalAlignment="Left" Margin="510,82,0,0" VerticalAlignment="Top" Width="120" Height="22" Click="refresh_Click"/>
-        <Button x:Name="add_user" Content="Add User" HorizontalAlignment="Left" Margin="260,82,0,0" VerticalAlignment="Top" Width="120" Height="22" Click="add_user_Click"/>
-        <Button x:Name="add_doc" Content="Add Document" HorizontalAlignment="Left" Margin="385,82,0,0" VerticalAlignment="Top" Width="120" Height="22" Click="add_doc_Click"/>
+        <Button x:Name="refresh" Content="Refresh" HorizontalAlignment="Left" Margin="260,82,0,0" VerticalAlignment="Top" Width="120" Height="22" Click="refresh_Click"/>
+        <Button x:Name="add_user" Content="Add User" HorizontalAlignment="Left" Margin="10,82,0,0" VerticalAlignment="Top" Width="120" Height="22" Click="add_user_Click"/>
+        <Button x:Name="add_doc" Content="Add Document" HorizontalAlignment="Left" Margin="135,82,0,0" VerticalAlignment="Top" Width="120" Height="22" Click="add_doc_Click"/>
         <TabControl x:Name="tab_control_grid" HorizontalAlignment="Left" Height="308" Margin="10,109,0,0" VerticalAlignment="Top" Width="827">
             <TabItem x:Name="tab_item_users" Header="Users">
                 <Grid Background="#FFE5E5E5">
@@ -24,6 +23,11 @@
             <TabItem x:Name="tab_item_books" Header="Books">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="DataGridBook" HorizontalAlignment="Left" Height="260" Margin="10,10,0,0" VerticalAlignment="Top" Width="801" Loaded="grid_LoaderBook"/>
+                </Grid>
+            </TabItem>
+            <TabItem x:Name="av_material" Header="AV materials">
+                <Grid Background="#FFE5E5E5">
+                    <DataGrid x:Name="DataGridAV_material" HorizontalAlignment="Left" Height="260" Margin="10,10,0,0" VerticalAlignment="Top" Width="801" Loaded="grid_LoaderAV_material"/>
                 </Grid>
             </TabItem>
         </TabControl>
