Добавил пользователю дата гриды со всеми документами теперь осталость написать что при нажатие на док появляется у него окошко бронить эту книжку Потом добавил добавление библиотекаря только окошоко потому что не нашел ни каких конструкторов Добавил копии для посмотра для библиотекаря, но без их изменений И еще кажется что-то там читайте комменты

--- a/LISy/LISy/LibrarianWorkWindow.xaml
+++ b/LISy/LISy/LibrarianWorkWindow.xaml
@@ -5,13 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LISy"
         mc:Ignorable="d"
-        Title="LibrarianWorkWindow" Height="454.648" Width="856.948" Icon="Design/icon_logo100x100.ico" ResizeMode="NoResize">
+        Title="LibrarianWorkWindow" Height="454.648" Width="856.948" Icon="Design/icon_logo100x100.ico" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid x:Name="work_lib_grid" Margin="0,0,4,-1">
         <Label x:Name="librarian_name" Content="Name:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="60" FontSize="16"/>
         <Label x:Name="librarian_name_fill" Content="" HorizontalAlignment="Left" Margin="75,10,0,0" VerticalAlignment="Top" Height="31" Width="305" FontSize="16"/>
         <Label x:Name="librarian_status" Content="Status:" HorizontalAlignment="Left" Margin="10,46,0,0" VerticalAlignment="Top" Width="60" FontSize="16"/>
         <Label x:Name="librarian_status_fill" Content="" HorizontalAlignment="Left" Margin="75,46,0,0" VerticalAlignment="Top" Width="305" FontSize="16"/>
-        <Button x:Name="refresh" Content="Refresh" HorizontalAlignment="Left" Margin="260,82,0,0" VerticalAlignment="Top" Width="120" Height="22" Click="refresh_Click"/>
+        <Button x:Name="refresh" Content="Refresh" HorizontalAlignment="Left" Margin="385,82,0,0" VerticalAlignment="Top" Width="120" Height="22" Click="refresh_Click"/>
         <Button x:Name="add_user" Content="Add User" HorizontalAlignment="Left" Margin="10,82,0,0" VerticalAlignment="Top" Width="120" Height="22" Click="add_user_Click"/>
         <Button x:Name="add_doc" Content="Add Document" HorizontalAlignment="Left" Margin="135,82,0,0" VerticalAlignment="Top" Width="120" Height="22" Click="add_doc_Click"/>
         <TabControl x:Name="tab_control_grid" HorizontalAlignment="Left" Height="308" Margin="10,109,0,0" VerticalAlignment="Top" Width="827">
@@ -30,7 +30,23 @@
                     <DataGrid x:Name="DataGridAV_material" HorizontalAlignment="Left" Height="260" Margin="10,10,0,0" VerticalAlignment="Top" Width="801" Loaded="grid_LoaderAV_material"/>
                 </Grid>
             </TabItem>
+            <TabItem x:Name="reference_book" Header="Reference Books">
+                <Grid Background="#FFE5E5E5">
+                    <DataGrid x:Name="DataGridRefernce_book" HorizontalAlignment="Left" Height="260" Margin="10,10,0,0" VerticalAlignment="Top" Width="801" Loaded="grid_LoaderReference_book"/>
+                </Grid>
+            </TabItem>
+            <TabItem x:Name="journal_article" Header="Journal\Articles">
+                <Grid Background="#FFE5E5E5">
+                    <DataGrid x:Name="DataGridJournal_article" HorizontalAlignment="Left" Height="260" Margin="10,10,0,0" VerticalAlignment="Top" Width="801" Loaded="grid_LoaderJournal_article"/>
+                </Grid>
+            </TabItem>
+            <TabItem x:Name="copies" Header="Copies">
+                <Grid Background="#FFE5E5E5">
+                    <DataGrid x:Name="DataGridCopies" HorizontalAlignment="Left" Height="260" Margin="10,10,0,0" VerticalAlignment="Top" Width="801" Loaded="grid_LoaderCopies"/>
+                </Grid>
+            </TabItem>
         </TabControl>
+        <Button x:Name="add_librarian" Content="Add Librarian" HorizontalAlignment="Left" Margin="260,82,0,0" VerticalAlignment="Top" Width="120" Height="22" Click="add_librarian_Click"/>
 
     </Grid>
 </Window>
